# rs485-rust

./: .gitignore  Cargo.toml  README.md  Settings.toml  Settings.toml.example  timescale.sql
src/: main.rs  modbus_datatypes.rs
